--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -45,8 +45,6 @@
         <div class="p-3">
             <h3>Review</h3>
             {% for review in object.review_set.all %}
-            {% empty %}
-                <h4>No review</h4>
                 <div class="card">
                     <div class="p-3">
                         <div class="d-flex text-center">
@@ -68,7 +66,8 @@
                         {% endif %}
                     </div>
                 </div>
-
+                {% empty %}
+                <h4>Sorry no review!!!</h4>
             {% endfor %}
 
         </div>
