--- a/carts/templates/carts/home.html
+++ b/carts/templates/carts/home.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
-
+{% load static %}
 
 {% block content %}
-    <h1>Cart</h1>
+{#    <h1>Cart</h1>#}
 
     {% if cart.products.exists %}
+        <h1>Product list</h1>
         <table class="table cart-table">
             <thead>
             <tr>
@@ -59,7 +60,8 @@
         </div>
 
     {% else %}
-        <p class='lead'>Cart is empty</p>
+        <h1 >Cart is empty</h1>
+        <img src="{% static 'img/empty_cart.png' %}" alt="">
     {% endif %}
 
 
