--- a/search/templates/search/view.html
+++ b/search/templates/search/view.html
@@ -1,43 +1,53 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
- <div class='row  mb-3'>
-            {% if query %}
-            <div class='col-12' >
+    <div class='row  mb-3'>
+        {% if query %}
+            <div class='col-12'>
                 Results for <b>{{ query }}</b>
                 <hr/>
             </div>
-            {% else %}
-
-            <div class='col-12 col-md-6 mx-auto py-5'>
-               {% include 'search/snippets/search-form.html' %}
-
-            </div>
-            <div class='col-12'>
-                <hr>
-            </div>
-            {% endif %}
-</div>
-
-
-        <div class='row'>
-
-
-
-    {% for obj in object_list %}
-        <div class='col'>
-
-        {% include 'products/snippets/card.html' with instance=obj %}  
-        
-        {% if forloop.counter|divisibleby:3 %}
-         </div> </div><div class='row'><div class='col-12'><hr/></div>
-        {% elif forloop.counter|divisibleby:2 %}
-            </div> </div><div class='row'><div class='col-12'><hr/></div>
         {% else %}
-         </div>  
+
+            {#            <div class='col-12 col-md-6 mx-auto py-5'>#}
+            {#                {% include 'search/snippets/search-form.html' %}#}
+            {##}
+            {#            </div>#}
+            {#            <div class='col-12'>#}
+            {#                <hr>#}
+            {#            </div>#}
         {% endif %}
-       
-    
-    {% endfor %}
-</div>
+    </div>
+
+
+    <div class='row'>
+
+
+        {% for obj in object_list %}
+            <div class='col'>
+
+                {% include 'products/snippets/card.html' with instance=obj %}
+
+                {% if forloop.counter|divisibleby:3 %}
+                    </div> </div>
+                    <div class='row'>
+                        <div class='col-12'>
+                            <hr/>
+                        </div>
+                        {% elif forloop.counter|divisibleby:2 %}
+                    </div></div>
+                    <div class='row'>
+                        <div class='col-12'>
+                            <hr/>
+                        </div>
+                        {% else %}
+                    </div>
+                {% endif %}
+
+            {% empty %}
+            <h1>No product match!!!</h1>
+            <img width="500" height="500" src="{% static 'img/no-product.jpg' %}" alt="No products">
+        {% endfor %}
+    </div>
 {% endblock %}
