--- a/addresses/templates/addresses/form.html
+++ b/addresses/templates/addresses/form.html
@@ -1,3 +1,14 @@
+{# Load the tag library #}
+{% load bootstrap5 %}
+
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+{# Display django.contrib.messages as Bootstrap alerts #}
+{% bootstrap_messages %}
+
+
 <form method='POST' action='{% if action_url %}{{ action_url }}{% else %}{% url "login" %}{% endif %}'> {% csrf_token %}
     {% if next_url %}
         <input type='hidden' name='next' value='{{ next_url }}'/>
@@ -11,7 +22,7 @@
             <div class="fadeIn first">
                 <h1>Address Form</h1>
             </div>
-            {{ form.as_p }}
+            {% bootstrap_form form %}
             <div class="d-flex justify-content-end">
                 <button type='submit' class='btn btn-primary mb-4 mr-4'>Submit</button>
             </div>
