--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -78,7 +78,7 @@
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Account
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item {% if request.path == account_url %}active{% endif %}"
                                href="{{ account_url }}">Home</a>
                             <a class="dropdown-item" href="{{ account_url }}#billing">Billing</a>
