--- a/accounts/templates/accounts/detail-update-view.html
+++ b/accounts/templates/accounts/detail-update-view.html
@@ -1,18 +1,27 @@
 {% extends "base.html" %}
+{# Load the tag library #}
+{% load bootstrap5 %}
 
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+{# Display django.contrib.messages as Bootstrap alerts #}
+{% bootstrap_messages %}
 
 {% block content %}
-<div class='col-12 col-md-6 mx-auto'>
-{% if title %}<h1 class='my-3'>{{ title }}</h1>{% endif %}
-<form method='POST' action='{% if action_url %}{{ action_url }}{% endif %}'> {% csrf_token %}
-    {% if next_url %}
-    <input type='hidden' name='next' value='{{ next_url }}' />
-    {% endif %}
-  {{ form.as_p }}
-  <label for='email'>Email</label>
-  <input type='text' id='email' class='form-control disabled' value='{{ request.user.email }}' disabled="disabled" /><span class='help-text'>Cannot change email</span><br/>
-  <button type='submit' class='btn btn-default my-3'>Save</button>
-  <a href='{% url "password_change" %}'>Change Password</a>
-</form>
-</div>
+    <div class='col-12 col-md-6 mx-auto'>
+        {% if title %}<h1 class='my-3'>{{ title }}</h1>{% endif %}
+        <form method='POST' action='{% if action_url %}{{ action_url }}{% endif %}'> {% csrf_token %}
+            {% if next_url %}
+                <input type='hidden' name='next' value='{{ next_url }}'/>
+            {% endif %}
+            {% bootstrap_form form %}
+            <label for='email'>Email</label>
+            <input type='text' id='email' class='form-control disabled' value='{{ request.user.email }}'
+                   disabled="disabled"/><span class='help-text'>Cannot change email</span><br/>
+            <button type='submit' class='btn btn-primary my-3'>Save</button>
+            <a href='{% url "password_change" %}'>Change Password</a>
+        </form>
+    </div>
 {% endblock %}
