--- a/reviews/templates/reviews/create_review.html
+++ b/reviews/templates/reviews/create_review.html
@@ -1,4 +1,14 @@
 {% extends "base.html" %}
+{# Load the tag library #}
+{% load bootstrap5 %}
+
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+{# Display django.contrib.messages as Bootstrap alerts #}
+{% bootstrap_messages %}
+
 
 {% block content %}
 
@@ -14,7 +24,7 @@
 
                 <form  method="POST">
                     {% csrf_token %}
-                    {{ form.as_p }}
+                    {% bootstrap_form form %}
                     <button class="btn btn-primary" type="submit">Submit</button>
                 </form>
 
