--- a/templates/base/forms.html
+++ b/templates/base/forms.html
@@ -1,15 +1,28 @@
 {% extends "base.html" %}
 
+{# Load the tag library #}
+{% load bootstrap5 %}
+
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+{# Display django.contrib.messages as Bootstrap alerts #}
+{% bootstrap_messages %}
 
 {% block content %}
-<div class='col-12 col-md-6 mx-auto'>
-{% if title %}<h1 class='my-3'>{{ title }}</h1>{% endif %}
-<form method='POST' action='{% if action_url %}{{ action_url }}{% endif %}'> {% csrf_token %}
-    {% if next_url %}
-    <input type='hidden' name='next' value='{{ next_url }}' />
-    {% endif %}
-  {{ form.as_p }}
-  <button type='submit' class='btn btn-default'>Save</button>
-</form>
-</div>
+    <div class='col-12 col-md-6 mx-auto'>
+        <div class="card">
+            <div class="p-3">
+                {% if title %}<h1 class='my-3'>{{ title }}</h1>{% endif %}
+                <form method='POST' action='{% if action_url %}{{ action_url }}{% endif %}'> {% csrf_token %}
+                    {% if next_url %}
+                        <input type='hidden' name='next' value='{{ next_url }}'/>
+                    {% endif %}
+                    {% bootstrap_form form %}
+                    <button type='submit' class='btn btn-primary'>Save</button>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
