--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,13 +1,29 @@
 {% extends "base.html" %}
+
+{# Load the tag library #}
+{% load bootstrap5 %}
+
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+{# Display django.contrib.messages as Bootstrap alerts #}
+{% bootstrap_messages %}
+
 {% block content %}
-<div class='row'>
-    <div class='col-md-4 col-10  mx-auto'>
-        <h1>Set your Password</h1>
-        <form method='post' action=''>{% csrf_token %}
-        {{ form.as_p }}
-        <span style='margin-bottom: 12px;'></span>
-        <button type="submit" class='btn btn-block btn-info'>Set new password</button>
-        </form>
-      </div>
-</div>
+    <div class='row'>
+        <div class='col-md-4 col-10  mx-auto'>
+            <div class="cart">
+                <div class="p-2">
+                    <h1>Set your Password</h1>
+                    <form method='post' action=''>{% csrf_token %}
+                        {% bootstrap_form form %}
+                        <span style='margin-bottom: 12px;'></span>
+                        <button type="submit" class='btn btn-block btn-info'>Set new password</button>
+                    </form>
+                </div>
+            </div>
+
+        </div>
+    </div>
 {% endblock %}
