--- a/billing/templates/billing/payment-method.html
+++ b/billing/templates/billing/payment-method.html
@@ -24,8 +24,28 @@
                     {#                    <div class='stripe-payment-form p-3' data-token='{{ publish_key }}'#}
                     {#                         data-next-url='{{ request.build_absolute_uri }}'#}
                     {#                         data-btn-title='Add Payment Method'></div>#}
+                    <div class="px-3 d-flex">
+                        <div>
+                            <h2>Secured by: <img src="{% static 'img/stripe.png' %}" height="100"
+                                                 width="100" alt=""></h2>
+                        </div>
+                    </div>
                 </div>
 
+            </div>
+
+            <div class="p-3">
+                <div class="card">
+
+                    <h1 class="text-center">Other Options</h1>
+                    <div class="py-3">
+                        <div class="d-flex justify-content-center">
+                            <img class="btn btn-primary" height="300" width="300"
+                                 src="https://securepay.sslcommerz.com/public/image/SSLCommerz-Pay-With-logo-All-Size-04.png"
+                                 alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
