--- a/carts/templates/carts/checkout-done.html
+++ b/carts/templates/carts/checkout-done.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
-
+{% load static %}
 
 {% block content %}
     <div class='col-6 mx-auto py-5 text-center'>
         <h1 class='display-1'>Thank you for your order!!!</h1>
+    <img src="{% static 'img/pay_cm.png' %}" height="400" width="600" alt="Payment complete">
     </div>
 
 {% endblock %}
